--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/white"
+    >
 
     <TextView
         android:id="@+id/tvID"
@@ -26,7 +28,8 @@
         android:textAlignment="center"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"/>
+        android:layout_marginRight="10dp"
+        android:inputType="number"/>
 
     <TextView
         android:id="@+id/tvNombre"
@@ -46,7 +49,8 @@
         android:textSize="20sp"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"/>
+        android:layout_marginRight="10dp"
+        />
 
     <TextView
         android:id="@+id/tvPrecio"
@@ -66,7 +70,8 @@
         android:textSize="20sp"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"/>
+        android:layout_marginRight="10dp"
+        android:inputType="numberDecimal"/>
 
 <LinearLayout
     android:layout_width="match_parent"
