--- a/app/src/main/res/layout/itemlista.xml
+++ b/app/src/main/res/layout/itemlista.xml
@@ -4,8 +4,9 @@
     android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="25dp"
+    app:cardCornerRadius="50dp"
     app:cardElevation="4dp"
+    app:cardBackgroundColor="@color/fondo"
     app:cardUseCompatPadding="true">
 
     <RelativeLayout
@@ -26,7 +27,9 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/tvNombreProd"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintBottom_toBottomOf="parent"
+
+            />
 
         <TextView
             android:id="@+id/tvNombreProd"
@@ -39,9 +42,9 @@
             android:textSize="25sp"
             app:layout_constraintLeft_toRightOf="@+id/tvCodProd"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            />
 
-        />
 
         <TextView
             android:id="@+id/tvPrecioProd"
@@ -54,7 +57,8 @@
             android:textSize="25sp"
             app:layout_constraintLeft_toRightOf="@+id/tvCodProd"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvNombreProd" />
+            app:layout_constraintTop_toBottomOf="@+id/tvNombreProd"
+            />
 
         <LinearLayout
             android:layout_width="wrap_content"
