--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="green_1">#6DD891</color>
+    <color name="purple_1">#EBCFFF</color>
+    <color name="green_1">#E62668</color>
     <color name="green_2">#28E483</color>
     <color name="purple_700">#50B0FA</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="fondo">#C3CDF3</color>
+    <color name="fondomain">#6CCACA</color>
+
 </resources>
