--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_1">#EBCFFF</color>
-    <color name="green_1">#E62668</color>
+    <color name="rosado_1">#E62668</color>
     <color name="green_2">#28E483</color>
     <color name="purple_700">#50B0FA</color>
     <color name="teal_200">#FF03DAC5</color>
